fixed all the red bugs

--- a/Project2/Project2-Frontend/src/app/doctor/doctor.component.html
+++ b/Project2/Project2-Frontend/src/app/doctor/doctor.component.html
@@ -7,16 +7,19 @@
 </div>
 
 
-<div *nfIf="!doctors">
+<div *ngIf="!doctors">
     (loading...)
 </div>
 <div *ngIf="doctors">
-    <div *nfIf="doctors.length === 0">
+    <div *ngIf="doctors.length === 0">
         empty
     </div>
 </div>
 <ul>
-    <li *ngfor ="let item of doctors">
+    <li *ngFor="let item of doctors">
+        <span class="badge">
+            {{item.DoctorId}}
+        </span>
         {{ item.FirstName }}
     </li>
 </ul>>
